--- a/app/views/courses/after_class.html.erb
+++ b/app/views/courses/after_class.html.erb
@@ -70,10 +70,12 @@
           <p class="title">教学团队</p>
           <div class="teachers">
             <% @teacher_courses.each do |teacher_course|%>
-              <div class="teacher-info">
-                <%= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.teacher.number) if teacher_course.try(:teacher).try(:image).present? %>
-                <p><%= teacher_course.try(:teacher).try(:name) %></p>
-              </div>
+              <% if teacher_course.teacher_id.present? %>
+                <div class="teacher-info">
+                  <%= link_to image_tag(teacher_course.try(:teacher).try(:image).try(:avatar).url(:t_60)), show_teachers_path(teacher_course.teacher.number) if teacher_course.try(:teacher).try(:image).present? %>
+                  <p><%= teacher_course.try(:teacher).try(:name) %></p>
+                </div>
+              <% end %>
             <% end %>
           </div>
         </li>
