--- a/app/views/layouts/wechat.html.erb
+++ b/app/views/layouts/wechat.html.erb
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title><%= wechat_title %></title>
+    <title><%= yield :wechat_title %></title>
     <%= stylesheet_link_tag 'wechat', media: 'all', 'data-turbolinks-track' => true %>
     <script src="http://cdnjs.gtimg.com/cdnjs/libs/zepto/1.1.4/zepto.min.js"></script>
     <%= csrf_meta_tags %>
