--- a/app/views/wechat/discusses/_tabbar.html.erb
+++ b/app/views/wechat/discusses/_tabbar.html.erb
@@ -1,19 +1,19 @@
-<div class="weui_tabbar">
-    <a href="javascript:;" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:controller] == "wechat/discusses" && params[:action] == "index" %>">
+<div class="weui_tabbar" style="z-index: 999;">
+    <a href="<%= wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:controller] == "wechat/discusses" && (params[:action] == "index" || params[:action] == "show") %>">
         <div class="weui_tabbar_icon">
             <%= image_tag "wechat/icon_nav_button.png" %>
         </div>
         <p class="weui_tabbar_label">专业人才培养校企论坛</p>
     </a>
 
-    <a href="javascript:;" class="weui_tabbar_item">
+    <a href="<%= learns_wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:action] == "learns" %>">
         <div class="weui_tabbar_icon">
             <%= image_tag "wechat/icon_nav_article.png" %>
         </div>
         <p class="weui_tabbar_label">课程学习论坛</p>
     </a>
     
-    <a href="javascript:;" class="weui_tabbar_item">
+    <a href="<%= innovations_wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:action] == "innovations" %>">
         <div class="weui_tabbar_icon">
             <%= image_tag "wechat/icon_nav_dialog.png" %>
         </div>
