--- a/app/views/wechat/discusses/_tabbar.html.erb
+++ b/app/views/wechat/discusses/_tabbar.html.erb
@@ -1,5 +1,5 @@
 <div class="weui_tabbar" style="z-index: 999;">
-    <a href="<%= wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:controller] == "wechat/discusses" && (params[:action] == "index" || params[:action] == "show") %>">
+    <a href="<%= wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:controller] == "wechat/discusses" && (params[:action] == "index" || params[:action] == "sorts") %>">
         <div class="weui_tabbar_icon">
             <%= image_tag "wechat/icon_nav_button.png" %>
         </div>
@@ -13,7 +13,7 @@
         <p class="weui_tabbar_label">课程学习论坛</p>
     </a>
     
-    <a href="<%= innovations_wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:action] == "innovations" %>">
+    <a href="<%= innovations_wechat_discusses_path %>" class="weui_tabbar_item <%= "weui_bar_item_on" if params[:action] == "innovations" || params[:action] == "show" %>">
         <div class="weui_tabbar_icon">
             <%= image_tag "wechat/icon_nav_dialog.png" %>
         </div>
