--- a/app/views/wechat/discusses/show.html.erb
+++ b/app/views/wechat/discusses/show.html.erb
@@ -1,38 +1,78 @@
 <% content_for :wechat_title, "讨论中心" %>
 
 <div class="weui_tab">
-	<div class="weui_tab_bd">
+  <div class="weui_tab_bd">
+    <!-- 话题 -->
+    <div class="content">
+      <!-- begin: 媒体对象列表 -->
+      <ul class="media-list">
+        <li class="media cell">
+          <div class="media-left">
+            <a href="#">
+              <%= image_tag @topic.try(:usertable).try(:show_image), class: "media-object img-circle", width: 36, height: 36 %>
+              <p class="text-center text-muted"><small><%= truncate(@topic.try(:usertable).try(:show_name),length: 4)%></small></p>
+            </a>
+          </div>
 
-		<div class="sorts clearfix">
-			<div class="col-xs-6">
-				<%= link_to "#", class: "item", onclick: "alert('模块维护中！')" do %>
-					<%= image_tag "sorts-book.png", width: "60%" %>
-					<p class="text-center">专业课程论坛</p>
-				<% end %>
-			</div>
+          <div class="media-body">
+            <!-- 主题 -->
+            <p class="media-heading text-primary"><%= @topic.title %></p>
+            <p class="text-justify"><%= @topic.body %></p>
+            <!-- 时间、评论数 -->
+            <p class="text-right">
+              <span class="text-muted pull-left"><%= @topic.created_at.try(:strftime,'%Y-%m-%d %H:%M') %></span>
+              <span class="glyphicon glyphicon-comment text-info"></span>
+              <span class="text-muted"><%= @topic.children.size %></span>
+            </p><!-- 时间、评论数 -->
 
-			<div class="col-xs-6">
-				<%= link_to "#", class: "item", onclick: "alert('模块维护中！')" do %>
-					<%= image_tag "sorts-hand.png", width: "60%" %>
-					<p class="text-center">校企合作论坛</p>
-				<% end %>
-			</div>
+            <!-- brgin: 评论表单 -->
+            <%= form_tag reply_topic_wechat_discusses_path, method: :post, remote: true do %>
+              <div class="weui_cells weui_cells_form comment_form">
+                <div class="weui_cell">
+                  <div class="weui_cell_bd weui_cell_primary">
+                    <%= text_area_tag "comment", "", rows: 3, class: "weui_textarea", placeholder: "请输入评论" %>
+                    <%= hidden_field_tag "comment_id", @topic.id %>
+                    <%= hidden_field_tag "type", params[:type] %>
+                    <%= hidden_field_tag "page", params[:page] %>
+                    <!-- 标识为讨论的show页面， -->
+                    <%= hidden_field_tag "is_show", "show" %>
+                    <div class="weui_textarea_counter">
+                      <%= submit_tag "回复", class: "weui_btn weui_btn_mini weui_btn_primary", data: {disable_with: "回复中..."}, onclick: "reply()" %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            <% end %><!-- end: 评论表单 -->
+            
+            <!-- brgin: 话题的所有评论 -->
+            <% @topic.children.each do |child| %>
+              <div class="media cell">
+                <div class="media-left">
+                  <a href="#">
+                    <%= image_tag child.try(:usertable).try(:show_image), class: "media-object img-circle", width: 36, height: 36 %>
+                    <p class="text-center text-muted"><small><%= truncate(child.try(:usertable).try(:show_name),length: 4)%></small></p>
+                  </a>
+                </div>
+                <div class="media-body">
+                  <p class="text-justify"><%= child.body %></p>
+                  <p class="text-right text-muted"><%= child.created_at.try(:strftime,'%Y-%m-%d %H:%M') %></p>
+                </div>
+              </div>
+            <% end %><!-- end: 话题的所有评论 -->
+          </div>
+        </li>
+      </ul><!-- end: 媒体对象列表 -->
+    </div><!-- 话题 -->
+  </div>
 
-			<div class="col-xs-6">
-				<%= link_to "#", class: "item", onclick: "alert('模块维护中！')" do %>
-					<%= image_tag "sorts-people1.png", width: "60%" %>
-					<p class="text-center">培养模式论坛</p>
-				<% end %>
-			</div>
-
-			<div class="col-xs-6">
-				<%= link_to "#", class: "item", onclick: "alert('模块维护中！')" do %>
-					<%= image_tag "sorts-people2.png", width: "60%" %>
-					<p class="text-center">实习就业论坛</p>
-				<% end %>
-			</div>
-		</div>
-
-	</div>
-	<%= render partial: "tabbar" %>
+  <%= render partial: "tabbar" %>
 </div>
+
+<script>
+  function reply() {
+    if($(this).siblings('#comment').first().val() == ''){
+      $(".weui_cell").addClass("error");
+      return false;
+    };
+  }
+</script>
