--- a/app/views/wechat/users/changepassword.html.erb
+++ b/app/views/wechat/users/changepassword.html.erb
@@ -1,15 +1,41 @@
 <div class="page">
-  <div class="div-passform container div-content">
-    <%= simple_form_for current_user, url: registration_path(:user), html: { class: 'form-horizontal', method: :put}, wrapper: :horizontal_form do |f|%>
-      <%= f.input :current_password, label: "原始密码", placeholder: '请输入原始密码', autofocus: false %>
-      <%= f.input :password, label: "新密码", placeholder: '请输入新密码', autofocus: false %>
-      <%= f.input :password_confirmation, label: "确认密码", placeholder: '请输入确认密码', autofocus: false %>
-
-      <div class="col-sm-5 col-sm-offset-2">
-      <p class="text-center">
-        <%= f.submit "确认修改", class: "weui_btn weui_btn_primary" %>
-      </p>
+  <div class="content native-scroll">
+    <div class="wechat-logo">
+      <div class="clearfix">
+        <div class="text-center">
+            <%= image_tag "wechat/logo.png", width: "30%"%>
+            <h3 class="logo">上海工商职业技术学院<small>&nbsp;&nbsp;|&nbsp;&nbsp;课程中心</small></h3>
+        </div>
       </div>
-    <% end %>
+    </div>
+
+    <div class="wechat-login">
+      <div id="flash_alert">
+        <% flash.each do |key, value| %>
+          <% if value.present? %>
+              <div class="text-danger"><%= value%></div>
+          <% end %>
+        <% end %>
+      </div>
+      <%= simple_form_for current_user, url: password_path(:user, c: :weixin), html: { class: 'form-horizontal', method: :put}, wrapper: :horizontal_form do |f|%>
+        <div class="form-group changepass">
+          <%= f.hint '请不要输入特殊字符!' %>
+          <%= f.password_field :current_password, label: "原始密码", placeholder: '请输入原始密码', class: "form-control", autofocus: false %>
+          <!-- <span class="glyphicon glyphicon-lock" aria-hidden="true"></span> -->
+        </div>
+        <div class="form-group changepass">
+          <%= f.password_field :password, label: "新密码", placeholder: '请输入新密码', class: "form-control", autofocus: false %>
+        </div>
+        <div class="form-group changepass">
+          <%= f.password_field :password_confirmation, label: "确认密码", placeholder: '请输入确认密码', class: "form-control", autofocus: false %>
+        </div>
+
+        <div class="col-sm-5 col-sm-offset-2">
+          <p class="text-center">
+            <%= f.submit "确认修改", class: "weui_btn weui_btn_primary" %>
+          </p>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
