--- a/app/views/wechat/users/show.html.erb
+++ b/app/views/wechat/users/show.html.erb
@@ -82,7 +82,7 @@
     </div>
   </div>
   <div class="buttons">
-    <%= link_to "修改密码", changepassword_wechat_users_path, class: "weui_btn weui_btn_primary" %>
+    <%= link_to "修改密码", changepassword_wechat_user_path(current_user), class: "weui_btn weui_btn_primary" %>
   </div>
   
   <div class="buttons">
