--- a/app/views/wechat/discusses/_new_modal.html.erb
+++ b/app/views/wechat/discusses/_new_modal.html.erb
@@ -30,7 +30,7 @@
 				</div>
 				<div class="weui_dialog_ft mt0 text-center">
 					<a href="javascript:;" class="weui_btn_dialog default" data-dismiss="modal" onclick="cancel()">取消</a>
-					<a href="javascript:;" class="weui_btn_dialog primary" onclick="commit()">确定</a>
+					<a href="javascript:;" class="weui_btn_dialog primary create_btn" onclick="commit()">确定</a>
 				</div>
 			<% end %>
 		</div>
@@ -48,6 +48,7 @@
 			if (content.length <= 0) {
 				$(".topic_body").addClass("weui_cell_warn");
 			} else {
+				$(".create_btn").addClass("weui_btn_disabled");
 				$("#new_comment").submit();
 			}
 		}
