--- a/app/views/user/my_answers.html.erb
+++ b/app/views/user/my_answers.html.erb
@@ -31,7 +31,7 @@
                 <%= image_tag current_user.show_image ,class: "img-rounded max60" %>
               </div>
               <div class="col-sm-9">
-                <div>奋斗在路上 <span class="grey-font">回答</span></div>
+                <div><%= current_user.name %> <span class="grey-font">回答</span></div>
                 <p>
                   <%= link_to comment.body,show_sub_courses_path(comment.try(:commentable).try(:number),course_number: comment.try(:commentable).try(:course).try(:number))%>
                 </p>
