--- a/app/views/wechat/users/persion_discusses.html.erb
+++ b/app/views/wechat/users/persion_discusses.html.erb
@@ -1,17 +1,30 @@
-<div class="navbar">
+<% content_for :wechat_title, "讨论中心" %>
+
+<div class="tab_container">
+  <div class="topbar">
     <div class="bd" style="height: 100%;">
-        <div class="weui_tab">
-            <div class="weui_navbar">
-                <div class="weui_navbar_item weui_bar_item_on">
-                    我的提问
-                </div>
-                <div class="weui_navbar_item">
-                    我的问答
-                </div>
-            </div>
-            <div class="weui_tab_bd">
-                
-            </div>
-        </div>
+      <div class="weui_tab">
+        <!-- 切换按钮 -->
+        <ul class="weui_navbar" role="tablist">
+          <li role="presentation" class="weui_navbar_item active">
+            <a href="#questions" aria-controls="questions" role="tab" data-toggle="tab">我的提问</a>
+          </li>
+          <li role="presentation" class="weui_navbar_item">
+            <a href="#answers" aria-controls="answers" role="tab" data-toggle="tab">我的回答</a>
+          </li>
+        </ul><!-- 切换按钮 -->
+      </div>
     </div>
+  </div>
+  <!-- 标签页 -->
+  <div class="tab-content">
+    <!-- 我的提问 -->
+    <div role="tabpanel" class="weui_tab_bd tab-pane fade in active" id="questions">
+      <%= render partial: "wechat/users/questions", locals: {comments: @question_comments} %>
+    </div>
+    <!-- 我的回答 -->
+    <div role="tabpanel" class="weui_tab_bd tab-pane fade" id="answers">
+      <%= render partial: "wechat/users/answers", locals: {comments: @answer_comments} %>
+    </div>
+  </div><!-- 标签页 -->
 </div>
