add exams user course

--- a/app/views/wechat/courses/after_class_exams.html.erb
+++ b/app/views/wechat/courses/after_class_exams.html.erb
@@ -3,7 +3,9 @@
     <% @sub_courses.each do |sub_course|%>
       <li class="col-sm-12 text-lists">
         <span class="title"><%= truncate(sub_course.name,length: 18) %></span>
-        <span class="glyphicon glyphicon-edit pull-right exam-edit" aria-hidden="true"></span>
+        <a href= <%= new_courses_wechat_exams_path(number: @course.number, sub_course_number: sub_course.number)%> class="pull-right">
+          <span class="glyphicon glyphicon-edit pull-right exam-edit" aria-hidden="true"></span>
+        </a>
       </li>
     <% end %>
   </ul>
