--- a/app/views/wechat/users/my_exams.html.erb
+++ b/app/views/wechat/users/my_exams.html.erb
@@ -1,67 +1,89 @@
 <div class="weui_tab">
-    <div class="weui_tab_bd">
-      <div class="container">
-        <!-- ###########################完成的测试########################## -->
-        <div class="weui-content1 div-content scoure-search">
-          <% if @exams.blank? %>
-            <div class="blank">没有已完成的测试</div>
-          <% else %>
-            <% @exams.each_with_index do |exam,index| %>
-              <div class="panel panel-default">
-                <div class="panel-body exams-panel-body">
-                  <div class="ov-hidden" style="min-height: 200px;overflow: hidden;width: 100%">
-                     <%= link_to image_tag(exam.try(:sub_course).try(:course).attachment.content.url(:c_350_230), width: "100%"), show_courses_path(exam.try(:sub_course).try(:course).number), class: 'img' if exam.try(:sub_course).try(:course).attachment%>
+  <div class="weui_tab_bd">
+    <div class="container">
+      <!-- ###########################完成的测试########################## -->
+      <div class="weui-content1 div-content scoure-search">
+        <% if @exams.blank? %>
+          <div class="blank">没有已完成的测试</div>
+        <% else %>
+          <% @exams.each_with_index do |exam,index| %>
+            <div class="panel panel-default">
+              <div class="panel-body exams-panel-body">
+                <div class="ov-hidden" style="min-height: 200px;overflow: hidden;width: 100%">
+                   <%= link_to image_tag(exam.try(:sub_course).try(:course).attachment.content.url(:c_350_230), width: "100%"), show_courses_path(exam.try(:sub_course).try(:course).number), class: 'img' if exam.try(:sub_course).try(:course).attachment%>
+                </div>
+                <p class="exam-name">
+                  <span ><%= link_to exam.try(:sub_course).try(:name), show_courses_path(exam.try(:sub_course).try(:course).try(:number)) %></span>
+                </p>
+                <div class="">
+                  <div class="score-detail col-xs-6">
+                  <p><span class="text-primary">&bull;</span>总分：100分</p>
+                  <p><span class="text-primary">&bull;</span>时间：<%= exam.created_at.try(:strftime,'%Y-%m-%d').try(:to_s) %></p>
                   </div>
-                  <p class="exam-name">
-                    <span ><%= link_to exam.try(:sub_course).try(:name), show_courses_path(exam.try(:sub_course).try(:course).try(:number)) %></span>
-                  </p>
-                  <div class="">
-                    <div class="score-detail col-xs-6">
-                    <p><span class="text-primary">&bull;</span>总分：100分</p>
-                    <p><span class="text-primary">&bull;</span>时间：<%= exam.created_at.try(:strftime,'%Y-%m-%d').try(:to_s) %></p>
-                    </div>
-                    <div class="score-detail score-detail-right col-xs-6 text-center">
-                      <p><span class="text-primary">&bull;</span>得分：<%= exam.total_score %>分</p>
-                      <p><%= link_to "查看试卷",exam_path(exam.id) ,class: "btn-text-check"%></p>
-                    </div>
+                  <div class="score-detail score-detail-right col-xs-6 text-center">
+                    <p><span class="text-primary">&bull;</span>得分：<%= exam.total_score %>分</p>
+                    <p><%= link_to "查看试卷",exam_path(exam.id) ,class: "btn-text-check"%></p>
                   </div>
                 </div>
               </div>
-            <% end -%>
-          <% end %> 
+            </div>
+          <% end -%>
+        <% end %> 
+      </div>
+      <div class="weui-content2 div-content">
+
+        <div class="panel panel-default">
+          <div class="panel-body exams-panel-body">
+            <div class="ov-hidden" style="min-height: 200px;overflow: hidden;width: 100%">
+               <%= image_tag "my-courses.png",width:"100%" %>
+            </div>
+            <p class="exam-name">
+              <span >CSS实现网页平滑过渡效果</span>
+            </p>
+            <div class="">
+              <div class="score-detail col-xs-6">
+              <p><span class="text-primary">&bull;</span>总分：100分</p>
+              <p><span class="text-primary">&bull;</span>时间：</p><p>2015-07-01 14:00:00</p>
+              </div>
+              <div class="score-detail score-detail-right col-xs-6 text-center">
+                <p><span class="text-primary">&bull;</span>时长：</p><p>1小时30分钟</p>
+                <p><%= link_to "开始考试","#{}" ,class: "btn-text-check"%></p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="weui-content2 div-content"></div>
       </div>
     </div>
-    <div id="wechat-tabbar" class="weui_tabbar">
-        <a href="javascript:;" class="weui_tabbar_item weui_bar_item_on">
-            <div class="weui_tabbar_icon">
-                <img src="path/to/images/icon_nav_button.png" alt="">
-            </div>
-            <p class="weui_tabbar_label">完成的测试</p>
-        </a>
-        <a href="javascript:;" class="weui_tabbar_item">
-            <div class="weui_tabbar_icon">
-                <img src="path/to/images/icon_nav_msg.png" alt="">
-            </div>
-            <p class="weui_tabbar_label">即将开始的测试</p>
-        </a>
-    </div>
+  </div>
+  <div id="wechat-tabbar" class="weui_tabbar">
+    <a href="#" class="weui_tabbar_item weui_bar_item_on">
+      <div class="weui_tabbar_icon">
+        <%= image_tag "wechat/icon_nav_article.png" %>
+      </div>
+      <p class="weui_tabbar_label">完成的测试</p>
+    </a>
+    <a href="#" class="weui_tabbar_item">
+      <div class="weui_tabbar_icon">
+        <%= image_tag "wechat/icon_nav_button.png" %>
+      </div>
+      <p class="weui_tabbar_label">即将开始的测试</p>
+    </a>
+  </div>
 </div>
 
- <script type="text/javascript">
-    $(function(){
-        var tabs = $("#wechat-tabbar a");
-        var cont = $(".weui_tab_bd .div-content");
-        var len = cont.length;
-         
-        cont.each(function(inx, elem){$(elem).css("z-index", len - inx);}).andSelf().hide().andSelf().eq(1).show();
-         
-        tabs.click(function(){
-          var inx = tabs.index(this);
-          tabs.removeAttr("class").addClass("weui_tabbar_item").andSelf().eq(inx + 1).addClass("div-content" + (inx + 1));
-          cont.fadeOut(300).not(this).andSelf().eq(inx).fadeIn(300);
-        });
-      }
-    );
- </script>
+<script type="text/javascript">
+  $(function(){
+      var tabs = $("#wechat-tabbar a");
+      var cont = $(".weui_tab_bd .div-content");
+      var len = cont.length;
+       
+      cont.each(function(inx, elem){$(elem).css("z-index", len - inx);}).andSelf().hide().andSelf().eq(1).show();
+       
+      tabs.click(function(){
+        var inx = tabs.index(this);
+        tabs.removeClass("weui_bar_item_on").addClass("weui_tabbar_item weui_bar_item_on").andSelf().eq(inx + 1).addClass("div-content" + (inx + 1));
+        cont.fadeOut(300).not(this).andSelf().eq(inx).fadeIn(300);
+      });
+    }
+  );
+</script>
