--- a/app/views/wechat/users/edit_password.html.erb
+++ b/app/views/wechat/users/edit_password.html.erb
@@ -17,20 +17,25 @@
           <% end %>
         <% end %>
       </div>
-      <%= simple_form_for current_user, url: password_path(:user, c: :weixin), html: { class: 'form-horizontal', method: :put}, wrapper: :horizontal_form do |f|%>
+      
+      <%= simple_form_for([:wechat, current_user], url: update_password_wechat_user_path(current_user), method: :put,
+                                  html: { class: 'form-horizontal'}, 
+                                  wrapper: :horizontal_form) do |f|%>
         <div class="form-group changepass">
           <%= f.hint '请不要输入特殊字符!' %>
-          <%= f.password_field :current_password, label: "原始密码", placeholder: '请输入原始密码', class: "form-control", autofocus: false %>
-          <!-- <span class="glyphicon glyphicon-lock" aria-hidden="true"></span> -->
+          <%= f.password_field :current_password, placeholder: '请输入原始密码', 
+                                                  class: "form-control", 
+                                                  autofocus: true,
+                                                  required: true %>
         </div>
         <div class="form-group changepass">
-          <%= f.password_field :password, label: "新密码", placeholder: '请输入新密码', class: "form-control", autofocus: false %>
+          <%= f.password_field :password, placeholder: '请输入新密码', class: "form-control", require: true %>
         </div>
         <div class="form-group changepass">
-          <%= f.password_field :password_confirmation, label: "确认密码", placeholder: '请输入确认密码', class: "form-control", autofocus: false %>
+          <%= f.password_field :password_confirmation, placeholder: '请输入确认密码', class: "form-control", require: true %>
         </div>
 
-        <div class="col-sm-5 col-sm-offset-2">
+        <div class="col-xs-12">
           <p class="text-center">
             <%= f.submit "确认修改", class: "weui_btn weui_btn_primary" %>
           </p>
